<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:name="com.dev.peralta.marqueeventos.ui.EventosFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:context=".ui.EventsFragment"
            tools:listitem="@layout/event_adapter"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.9"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/nenhum_dado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewMessage"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/cat"
            android:id="@+id/spinner" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:dropDownWidth="match_parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btBuscar"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_search"
            android:id="@+id/btBuscar"
            app:layout_constraintTop_toTopOf="@+id/spinner" app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            android:elevation="0dp" android:contentDescription="@string/buscar"/>
</androidx.constraintlayout.widget.ConstraintLayout>
